@@ -83,6 +83,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #11647: objects created using contextlib.contextmanager now support
+  more than one call to the function when used as a decorator. Initial patch
+  by Ysj Ray.
+
 - logging: don't define QueueListener if Python has no thread support.
 
 - functools.cmp_to_key() now works with collections.Hashable().
